# iot_proj_3

./: README.md  docker-compose.yml  mqtt-source.yml
Command/command-backend/: Dockerfile  package-lock.json  package.json
Command/command-backend/src/: main.ts
Command/command-frontend/: Dockerfile  package-lock.json  package.json
Command/command-frontend/src/: App.js
Dashboard/: Dockerfile  index.js  package-lock.json  package.json
Ekuiper-Setup/: index.js  package-lock.json  package.json
Filter/: Dockerfile  analytics.py  pyproject.toml
